--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <img href="notkohrt.github.io/source/loop.png"></img>
   <body>
     <h1>Hello!</h1>
       <p>Abby is a dumb idiot</p>
+      
   </body>
 </html>
