--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <img href="notkohrt.github.io/source/loop.png"></img>
+  <img href="notkohrt.github.io/Loop Banner.png"></img>
   <body>
     <h1>Hello!</h1>
       <p>Abby is a dumb idiot</p>
