--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <img src="/docs/assets/Loop Banner.png"></img>
+  <img src="/docs/assets/Loop Banner.png" width="1000" height="1000"></img>
   <body>
     <h1>Hello!</h1>
       <p>Abby is a dumb idiot</p>
