--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <img src="/docs/assets/Loop Banner.png" width="1000" height="1000"></img>
+  <img src="/docs/assets/Loop Banner 4000x1000.png" width="1000" height="250"></img>
   <body>
     <h1>Hello!</h1>
-      <p>Abby is a dumb idiot</p>
-      
+      <p>Abby is a dumb idiot</p>  
   </body>
 </html>
