--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <img src="/docs/assets/Loop Banner 4000x1000.png" width="1000" height="250"></img>
   <body>
+    <a href="notkohrt.pro" target="_blank"><img src="notkohrt.github.io" alt="NotKohrt Loopring Logo"/></a>
     <h1>Hello!</h1>
       <p>Abby is a dumb idiot</p>  
   </body>
