--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <a href="notkohrt.pro" target="_blank"><img src="docs/assets/Loop Banner 4000x1000.png" alt="NotKohrt Loopring Logo" width="600" height="150"/></a>
+    <a href="" target="_blank"><img src="docs/assets/Loop Banner 4000x1000.png" alt="NotKohrt Loopring Logo" width="600" height="150"/></a>
     <h1>Hello!</h1>
       <p>Abby is a dumb idiot</p>  
   </body>
