--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <body>
     <a href="" target="_blank"><img src="docs/assets/Loop Banner 4000x1000.png" alt="NotKohrt Loopring Logo" width="600" height="150"/></a>
     <h1>Hello!</h1>
-      <p>Abby is a dumb idiot</p>  
+      <p> This is what Duong is doing</p>  
   </body>
 </html>
