--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <body>
     <a href="" target="_blank"><img src="docs/assets/Loop Banner 4000x1000.png" alt="NotKohrt Loopring Logo" width="600" height="150"/></a>
-    <h1>Hello!</h1>
-      <p> This is what Duong is doing</p>  
+    <h1>This is what Duong is doing!</h1> 
   </body>
 </html>
